# atlas-cms

./: .cmsignore  .gitignore  CMS.bat  CODEX_ATLAS_REPORT.md  CONTRIBUTORS.md  PLAN.md  README.md  SECURITY.md  SKILL.md  cms_exe.py  codebase_memory_system_design_spec.md  pyproject.toml  sentinel.config.json  updates.md
.codex/: anchor-drift-task.md
cms/: __init__.py  activity.py  align.py  anchor_drift.py  anchors.py  annotations.py  app.py  brainstorm.py  bundle.py  chat.py  cli.py  config.py  decisions.py  explain.py  exporter.py  feature_discovery.py  features.py  fidelity.py  flowreview.py  fuse.py  githistory.py  graph_builder.py  hierarchy.py  ideas.py  impact.py  intent.py  js_parser.py  lens.py  library.py  library_usage.py  mcp.py  memory.py  notes.py  picker.py  prompt_export.py  providers.py  review.py  scanner.py  scope.py  scout.py  (+8 more)
docs/: ATLAS_OPERATIONS.md  AUDIT_REMEDIATION_2026-07-12.md  HERMES_SENTINEL.md  HUMAN_VIEW.md  Resolution-Human-View-feature.md  feature_ledger.json
skills/: adaptive-model-routing-mode.md  adversarial-edge-case-qa.md  agentic-system-red-team.md  artifact-delivery-qa.md  atlas-conventions.md  atlas-default.md  atlas-frontend-specialist.md  atlas-repo-invariants.md  capability-router.md  claude-api.md  doc-coauthoring.md  evaluation-driven-development.md  hyperfocus-mode.md  index.json  internal-comms.md  lets-get-rich.md  library-evolution-loop.md  memory-first.md  premortem-failure-mapping.md  root-cause-bug-hunt.md  skill-creator.md  skill-quality-gate.md  slack-gif-creator.md  ui-preferences.md  web-artifacts-builder.md  (+2 more)
(+86 files in other folders)
